microservices/k8s/broker.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: broker-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: broker-service
  template:
    metadata:
      labels:
        app: broker-service
    spec:
      containers:
      - name: broker-service
        image: vixp/broker-service:1.0.0
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
          - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: broker-service
spec:
  selector:
    app: broker-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: main-port
