microservices/k8s/logger.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logger-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: logger-service
  template:
    metadata:
      labels:
        app: logger-service
    spec:
      containers:
      - name: logger-service
        image: vixp/logger-service:1.0.0
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
          - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: logger-service
spec:
  selector:
    app: logger-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: main-port
