microservices/k8s/mailer.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailer-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mailer-service
  template:
    metadata:
      labels:
        app: mailer-service
    spec:
      containers:
      - name: mailer-service
        image: vixp/mailer-service:1.0.0
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
          - containerPort: 80
          - containerPort: 5001

---

apiVersion: v1
kind: Service
metadata:
  name: mailer-service
spec:
  selector:
    app: mailer-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: main-port
    - protocol: TCP
      port: 5001
      targetPort: 5001
      name: rpc-port
